--- a/Project/Project/Project.vcxproj
+++ b/Project/Project/Project.vcxproj
@@ -139,7 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="hellogit.cpp" />
+    <ClCompile Include="hellogit.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="homework2.c" />
+    <ClCompile Include="homework_02.cpp" />
+    <ClCompile Include="training_01.cpp" />
+    <ClCompile Include="traning_02.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
