--- a/Project/week03/week03.vcxproj.filters
+++ b/Project/week03/week03.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="homework_02.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="lab1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
