--- a/Project/Project1/Project1.vcxproj.filters
+++ b/Project/Project1/Project1.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="pair.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="소스1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
