--- a/Project/Project1/Project1.vcxproj.filters
+++ b/Project/Project1/Project1.vcxproj.filters
@@ -15,13 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="소스.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="pair.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="소스1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="termproject.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
